# swip

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/parser/: evaluator.rs  mod.rs  token_parser.rs
src/test/: evaluator_tests.rs  mod.rs  parser_tests.rs  token_tests.rs
src/token/: data_types.rs  mod.rs  token_type.rs  tokenizer.rs
