[package]
name = "swip"
version = "0.1.0"
authors = ["adamyork@users.noreply.github.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"
strum = "0.18.0"
strum_macros = "0.18.0"
reduce = "0.1"